# fadal

./: .replit  about.html  admin.html  contact.html  database.py  disclaimer.html  email_system.py  fadal_rewards.db  index.html  payment.html  payment_gateway.py  pyproject.toml  replit.nix  script.js  security.py  style.css  terms.html
