[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "dependencies==7.7.1",
    "dependency-check==0.6.0",
    "dependency-groups==1.3.0",
    "dependency-injector==4.43.0",
    "deplacy==2.1.0",
    "deploy-config-generator==2.29.0",
    "deployfish==1.14.9",
    "deployhub==9.3.210",
    "depocs==2.1.0",
    "deprecated==1.2.15",
    "depthai-sdk==1.15.1",
]
